--- a/src/main/resources/com/example/hql/hello-view.fxml
+++ b/src/main/resources/com/example/hql/hello-view.fxml
@@ -2,20 +2,38 @@
 
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 
-<BorderPane prefHeight="669.0" prefWidth="858.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+
+<BorderPane prefHeight="699.0" prefWidth="1112.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
    <top>
-      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <HBox prefHeight="94.0" prefWidth="1112.0" BorderPane.alignment="CENTER">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="HQL" wrappingWidth="104.30224609375">
-               <font>
-                  <Font name="Vampire Wars" size="54.0" />
-               </font>
-            </Text>
+            <Pane prefHeight="100.0" prefWidth="181.0">
+               <children>
+                  <Text layoutX="37.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="HQL" wrappingWidth="125.30224609375">
+                     <font>
+                        <Font url="@/vampire_wars/VampireWars.ttf" size="55.0" />
+                     </font>
+                  </Text>
+               </children>
+            </Pane>
          </children>
       </HBox>
    </top>
+   <left>
+      <Pane prefHeight="605.0" prefWidth="219.0" BorderPane.alignment="CENTER" />
+   </left>
+   <right>
+      <Pane prefHeight="605.0" prefWidth="329.0" BorderPane.alignment="CENTER" />
+   </right>
+   <center>
+      <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+   </center>
+   <bottom>
+      <Pane prefHeight="38.0" prefWidth="1112.0" BorderPane.alignment="CENTER" />
+   </bottom>
 </BorderPane>
