--- a/src/main/resources/com/example/hql/hello-view.fxml
+++ b/src/main/resources/com/example/hql/hello-view.fxml
@@ -1,37 +1,132 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-
-<BorderPane prefHeight="699.0" prefWidth="1112.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="699.0" prefWidth="1327.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hql.HelloController">
    <top>
       <HBox prefHeight="94.0" prefWidth="1112.0" BorderPane.alignment="CENTER">
          <children>
             <Pane prefHeight="100.0" prefWidth="181.0">
                <children>
-                  <Text layoutX="37.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="HQL" wrappingWidth="125.30224609375">
+                  <Text id="titleText" fill="#1e1e1e" layoutX="37.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="HQL" textAlignment="CENTER" wrappingWidth="125.30224609375">
                      <font>
-                        <Font url="@/vampire_wars/VampireWars.ttf" size="55.0" />
-                     </font>
-                  </Text>
+                        <Font name="Vampire Wars" size="54.0" />
+                     </font></Text>
                </children>
             </Pane>
          </children>
       </HBox>
    </top>
    <left>
-      <Pane prefHeight="605.0" prefWidth="219.0" BorderPane.alignment="CENTER" />
+      <Pane prefHeight="605.0" prefWidth="219.0" BorderPane.alignment="CENTER">
+         <children>
+            <Text fill="#464545" layoutX="65.0" layoutY="153.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Top-up:">
+               <font>
+                  <Font name="System Bold" size="19.0" />
+               </font>
+            </Text>
+            <TextField layoutX="44.0" layoutY="170.0" prefHeight="36.0" prefWidth="110.0" promptText="₱" />
+            <Button layoutX="73.0" layoutY="220.0" mnemonicParsing="false" text="ADD" textFill="#464545">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Button>
+         </children></Pane>
    </left>
    <right>
-      <Pane prefHeight="605.0" prefWidth="329.0" BorderPane.alignment="CENTER" />
+      <Pane prefHeight="567.0" prefWidth="426.0">
+         <children>
+            <Text fill="#464545" layoutX="14.0" layoutY="219.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username:">
+               <font>
+                  <Font name="System Bold" size="19.0" />
+               </font>
+            </Text>
+            <Text fill="#464545" layoutX="16.0" layoutY="274.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password:">
+               <font>
+                  <Font name="System Bold" size="19.0" />
+               </font>
+            </Text>
+            <Text fill="#464545" layoutX="85.0" layoutY="149.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CREATE ACCOUNT">
+               <font>
+                  <Font name="Vampire Wars" size="33.0" />
+               </font>
+            </Text>
+            <Text fill="#464545" layoutX="22.0" layoutY="327.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Amount:">
+               <font>
+                  <Font name="System Bold" size="19.0" />
+               </font>
+            </Text>
+            <TextField fx:id="usernameField" layoutX="125.0" layoutY="194.0" prefHeight="36.0" prefWidth="244.0" promptText="e.g.  Razell gahi mocode gahi tanan" />
+            <Button fx:id="createAccountButton" layoutX="125.0" layoutY="361.0" mnemonicParsing="false" onAction="#onCreateAccountClick" text="ADD" textFill="#464545">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Button>
+            <PasswordField fx:id="passwordField" layoutX="125.0" layoutY="248.0" prefHeight="36.0" prefWidth="244.0" promptText="e.g. pinayflixable" />
+            <TextField fx:id="topupField" layoutX="125.0" layoutY="302.0" prefHeight="36.0" prefWidth="244.0" promptText="₱" />
+         </children></Pane>
    </right>
    <center>
-      <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+      <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <TextField layoutX="100.0" layoutY="14.0" prefHeight="36.0" prefWidth="365.0" promptText="Search Username" />
+            <ScrollPane fx:id="scrollPane" layoutX="-4.0" layoutY="104.0" prefHeight="468.0" prefWidth="686.0">
+               <content>
+                  <TableView fx:id="userTableView" prefHeight="519.0" prefWidth="674.0">
+                     <columns>
+                        <TableColumn fx:id="usernameColumn" prefWidth="380.0" text="Username" />
+                        <TableColumn fx:id="timeRemainingColumn" prefWidth="150.0" text="Time Remaining" />
+                        <TableColumn fx:id="balanceColumn" prefWidth="150.0" text="Balance" />
+                     </columns>
+                  </TableView>
+
+               </content>
+            </ScrollPane>
+
+
+            <HBox layoutX="4.0" layoutY="58.0" prefHeight="59.0" prefWidth="681.0">
+               <children>
+                  <Pane prefHeight="59.0" prefWidth="119.0">
+                     <children>
+                        <Text fill="#464545" layoutX="24.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" textAlignment="CENTER">
+                           <font>
+                              <Font name="System Bold" size="15.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </Pane>
+                  <Pane prefHeight="59.0" prefWidth="229.0" />
+                  <Pane prefHeight="59.0" prefWidth="159.0">
+                     <children>
+                        <Text fill="#464545" layoutX="21.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Time remaining" textAlignment="CENTER">
+                           <font>
+                              <Font name="System Bold" size="15.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </Pane>
+                  <Pane prefHeight="59.0" prefWidth="119.0">
+                     <children>
+                        <Text fill="#464545" layoutX="44.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Balance" textAlignment="CENTER">
+                           <font>
+                              <Font name="System Bold" size="15.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </Pane>
+               </children>
+            </HBox>
+         </children></Pane>
    </center>
    <bottom>
       <Pane prefHeight="38.0" prefWidth="1112.0" BorderPane.alignment="CENTER" />
