--- a/src/main/resources/com/example/hql/hello-view.fxml
+++ b/src/main/resources/com/example/hql/hello-view.fxml
@@ -35,8 +35,8 @@
                   <Font name="System Bold" size="19.0" />
                </font>
             </Text>
-            <TextField layoutX="44.0" layoutY="170.0" prefHeight="36.0" prefWidth="110.0" promptText="₱" />
-            <Button layoutX="73.0" layoutY="220.0" mnemonicParsing="false" text="ADD" textFill="#464545">
+            <TextField fx:id="topupAmountField" layoutX="44.0" layoutY="170.0" prefHeight="36.0" prefWidth="110.0" promptText="₱" />
+            <Button fx:id="topupButton" layoutX="73.0" layoutY="220.0" mnemonicParsing="false" text="ADD" textFill="#464545">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
@@ -79,7 +79,7 @@
    <center>
       <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <TextField layoutX="100.0" layoutY="14.0" prefHeight="36.0" prefWidth="365.0" promptText="Search Username" />
+            <TextField fx:id="search" layoutX="100.0" layoutY="14.0" prefHeight="36.0" prefWidth="365.0" promptText="Search Username" />
             <ScrollPane fx:id="scrollPane" layoutX="-4.0" layoutY="104.0" prefHeight="468.0" prefWidth="686.0">
                <content>
                   <TableView fx:id="userTableView" prefHeight="519.0" prefWidth="667.0">
