--- a/src/main/resources/com/example/hql/hello-view.fxml
+++ b/src/main/resources/com/example/hql/hello-view.fxml
@@ -36,11 +36,13 @@
                </font>
             </Text>
             <TextField fx:id="topupAmountField" layoutX="44.0" layoutY="170.0" prefHeight="36.0" prefWidth="110.0" promptText="₱" />
-            <Button fx:id="topupButton" layoutX="73.0" layoutY="220.0" mnemonicParsing="false" text="ADD" textFill="#464545">
+            <Button fx:id="topupButton" layoutX="73.0" layoutY="220.0" mnemonicParsing="false"
+                    onAction="#onTopUpClick" text="ADD" textFill="#464545">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
             </Button>
+
          </children></Pane>
    </left>
    <right>
